--- a/Recruit/Resources/jobresponse.properties
+++ b/Recruit/Resources/jobresponse.properties
@@ -5,3 +5,9 @@ forward=#forwardres
 toaddress=#txtTo
 tomailid=trainee1@tiliconveli.com
 send=#btnsendmail
+close=#btnPnlClose
+download=#downloadResumeHref
+checkmail=#emlchkavail
+subject=#tbEmailSub
+Resume= forwardresume
+submit=#Submit1
